# what-sold

./: .dockerignore  .gitignore  Dockerfile  README.md  links.py  main.py  matcher.py  ppr.py  pyproject.toml  requirements-dev.txt  requirements.txt  spreadsheet.py
.github/workflows/: ci.yml
tests/: test_links.py  test_matcher.py  test_ppr.py  test_spreadsheet.py
what_sold/: __main__.py  links.py  main.py  matcher.py  ppr.py  spreadsheet.py
