[project]
name = "what-sold"
description = "Search the Irish Property Price Register and export nearby sales to Excel"
requires-python = ">=3.12"
dependencies = [
    "pandas==3.0.1",
    "python-dateutil==2.9.0.post0",
    "rapidfuzz==3.14.3",
    "openpyxl==3.1.5",
    "playwright==1.58.0",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, warnings, isort

[tool.ruff.format]
quote-style = "double"
